<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/inicio1"
    android:padding="15dp">


    <ImageView
        android:id="@+id/lolImageLogin"
        android:layout_width="175dp"
        android:layout_height="221dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/usernameLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/text_edits_login_signup"
        android:fontFamily="@font/ubuntu_medium"
        android:hint="@string/nombre_de_usuario"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:textColor="@color/white"
        android:textColorHint="#96FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_edits_login_signup"
        android:fontFamily="@font/ubuntu_medium"
        android:hint="@string/contrase_a"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:textColor="@color/white"
        android:textColorHint="#96FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogin" />

    <CheckBox
        android:id="@+id/checkBoxLogin"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:buttonTint="@color/twinder_purple_2"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/recuerdame"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@color/purple_200"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/entrar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>