<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/firstScreenFragment">

    <fragment
        android:id="@+id/appInfoFragment"
        android:name="com.example.spashscreen2.NavigationFragments.AppInfoFragment"
        android:label="@string/app_info"
        tools:layout="@layout/fragment_app_info" />
    <fragment
        android:id="@+id/puntuacionesFragment"
        android:name="com.example.spashscreen2.NavigationFragments.PuntuacionesFragment"
        android:label=""
        tools:layout="@layout/fragment_puntuaciones" >
        <action
            android:id="@+id/action_puntuacionesFragment_to_addFriendFragment"
            app:destination="@id/addFriendFragment" />
    </fragment>
    <fragment
        android:id="@+id/cambiarIdiomaFragment"
        android:name="com.example.spashscreen2.NavigationFragments.CambiarIdiomaFragment"
        android:label="@string/cambiar_idioma"
        tools:layout="@layout/fragment_cambiar_idioma" />
    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.example.spashscreen2.NavigationFragments.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil"/>
    <dialog
        android:id="@+id/confirmarLogoutFragment"
        android:name="com.example.spashscreen2.ConfirmarLogoutFragment"
        android:label="fragment_confirmar_logout"
        tools:layout="@layout/fragment_confirmar_logout">
        <action
            android:id="@+id/action_confirmarLogoutFragment_to_firstScreenFragment"
            app:destination="@id/firstScreenFragment" />
    </dialog>
    <fragment
        android:id="@+id/amigosFragment"
        android:name="com.example.spashscreen2.NavigationFragments.ChatFragment"
        android:label=""
        tools:layout="@layout/fragment_chat" >
        <action
            android:id="@+id/action_amigosFragment_to_chatMessagesFragment"
            app:destination="@id/chatMessagesFragment" />
    </fragment>
    <fragment
        android:id="@+id/calendarioFragment"
        android:name="com.example.spashscreen2.NavigationFragments.CalendarioFragment"
        android:label="@string/calendario"
        tools:layout="@layout/fragment_calendario" />
    <fragment
        android:id="@+id/verAmigosFragment"
        android:name="com.example.spashscreen2.NavigationFragments.AmigosFragment"
        android:label="@string/amigos"
        tools:layout="@layout/fragment_amigos" >
        <action
            android:id="@+id/action_verAmigosFragment_to_chatFriendFragment"
            app:destination="@id/chatFriendFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.spashscreen2.NavigationFragments.HomeFragment"
        android:label=""
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_calendarioFragment"
            app:destination="@id/calendarioFragment" />
        <action
            android:id="@+id/action_homeFragment_to_puntuacionesFragment"
            app:destination="@id/puntuacionesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_otroPerfilFragment"
            app:destination="@id/otroPerfilFragment" />
        <action
            android:id="@+id/action_homeFragment_to_buscarFragment"
            app:destination="@id/buscarFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.spashscreen2.StartFragments.RegisterFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_register"
        app:startDestination="@id/action_signUpFragment_to_signInFragment">
        <action
            android:id="@+id/action_signUpFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
    </fragment>
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.spashscreen2.StartFragments.LogInFragment"
        android:label="fragment_sign_in"
        tools:layout="@layout/fragment_log_in">
        <action
            android:id="@+id/action_signInFragment_to_splashScreenFragment"
            app:destination="@id/splashScreenFragment" />
    </fragment>
    <fragment
        android:id="@+id/firstScreenFragment"
        android:name="com.example.spashscreen2.StartFragments.FirstScreenFragment"
        android:label="fragment_first_screen"
        tools:layout="@layout/fragment_first_screen">
        <action
            android:id="@+id/action_firstScreenFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
        <action
            android:id="@+id/action_firstScreenFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>
    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="com.example.spashscreen2.StartFragments.SplashScreenFragment"
        android:label="fragment_splash_screen"
        tools:layout="@layout/fragment_splash_screen">
        <action
            android:id="@+id/action_splashScreenFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <action
        android:id="@+id/action_global_perfilFragment_Perfil"
        app:destination="@id/perfilFragment">

        <argument
            android:name="argumento"
            app:argType="integer"
            android:defaultValue="0" />

    </action>

    <action
        android:id="@+id/action_global_perfilFragment_History"
        app:destination="@id/perfilFragment" >

        <argument
            android:name="argumento"
            app:argType="integer"
            android:defaultValue="1" />

    </action>
    <fragment
        android:id="@+id/chatMessagesFragment"
        android:name="com.example.spashscreen2.ChatMessagesFragment"
        tools:layout="@layout/fragment_chat_messages" />
    <fragment
        android:id="@+id/addFriendFragment"
        android:name="com.example.spashscreen2.AddFriendFragment"
        android:label="fragment_add_friend"
        tools:layout="@layout/fragment_add_friend" />
    <fragment
        android:id="@+id/otroPerfilFragment"
        android:name="com.example.spashscreen2.OtroPerfilFragment"
        android:label="fragment_otro_perfil"
        tools:layout="@layout/fragment_otro_perfil" />
    <fragment
        android:id="@+id/buscarFragment"
        android:name="com.example.spashscreen2.NavigationFragments.BuscarFragment"
        android:label="fragment_buscar"
        tools:layout="@layout/fragment_buscar" >
        <action
            android:id="@+id/action_buscarFragment_to_otroPerfilFragment"
            app:destination="@id/otroPerfilFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFriendFragment"
        android:name="com.example.spashscreen2.ChatFriendFragment"
        android:label="fragment_chat_friend"
        tools:layout="@layout/fragment_chat_friend" />

</navigation>